--- a/report.html
+++ b/report.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="glass-card">
-        <h2 class="title-sub">Chapter 1 – Introduction</h2>
+        <h2 class="title-sub">Module 1 – Introduction</h2>
         <p>
             In a multiprogramming environment, several processes compete for limited
             resources such as memory, I/O devices and CPU cycles. If resource
@@ -62,7 +62,7 @@
     </div>
 
     <div class="glass-card">
-        <h2 class="title-sub">Chapter 2 – Theoretical Background</h2>
+        <h2 class="title-sub">Module 2 – Theoretical Background</h2>
         <p><b>2.1 Deadlock definition</b></p>
         <p>
             A deadlock is a state in which a set of processes are blocked because
@@ -141,7 +141,7 @@
 
     
     <div class="glass-card">
-        <h2 class="title-sub">Chapter 3 – Deadlock Detection Algorithm</h2>
+        <h2 class="title-sub">Module 3 – Deadlock Detection Algorithm</h2>
         <p>
             DeadlockLab uses a Banker-style detection algorithm based on three
             main data structures:
@@ -216,7 +216,6 @@
                 <line x1="215" y1="95" x2="215" y2="115"
                       stroke="#e5e7eb" stroke-width="1.2" marker-end="url(#arrowWhite)"/>
 
-                <!-- Yes -->
                 <line x1="155" y1="145" x2="112" y2="145"
                       stroke="#22c55e" stroke-width="1.2"/>
                 <line x1="112" y1="145" x2="112" y2="185"
@@ -240,7 +239,7 @@
 
     <!-- CHAPTER 4 -->
     <div class="glass-card">
-        <h2 class="title-sub">Chapter 4 – Implementation Details</h2>
+        <h2 class="title-sub">Module 4 – Implementation Details</h2>
         <p>
             DeadlockLab is built as a multi-page web application:
         </p>
@@ -258,9 +257,8 @@
         </p>
     </div>
 
-    <!-- CHAPTER 5 -->
     <div class="glass-card">
-        <h2 class="title-sub">Chapter 5 – Conclusion & Future Scope</h2>
+        <h2 class="title-sub">Module 5 – Conclusion & Future Scope</h2>
         <p>
             The project demonstrates how theoretical concepts of deadlocks can be
             visualized and experimented with using a browser-based simulator. It
